Assets/Plugins/wrnchAI/bin/wrnch.framework/Headers/poseParams.h

    typedef struct wrPoseParams* wrPoseParamsHandle;
    typedef const struct wrPoseParams* wrPoseParamsHandleConst;
    WRNCH_DLL_INTERFACE wrPoseParamsHandle wrPoseParams_Create(void);
    WRNCH_DLL_INTERFACE void wrPoseParams_Destroy(wrPoseParamsHandle);
    typedef enum
    {
        wrSensitivity_LOW,
        wrSensitivity_MEDIUM,
        wrSensitivity_HIGH
    } wrSensitivity;
    typedef enum
    {
        wrTrackerKind_V1 = 0,
        wrTrackerKind_V2,
        wrTrackerKind_None
    } wrTrackerKind;
    /// @brief set the tracker kind to be used by a subsequent pose estimator.
    ///        Trackers attempt to set consistent ids on persons in frame through time.
    ///        ids are accessed `XXX_GetId` family of functions on pose types, eg, `wrPose2d_GetId`.
    ///        wrnchAI implements two trackers, V1 and V2, described below.
    ///
    ///        V1: The legacy (and default) tracker which is based on Kalman filtering of joints.
    ///            This tracker is faster than V2 but suffers from more id switches between people.
    ///
    ///        V2: The new (and recommended) tracker which uses both position and "appearance"
    ///            information of persons. This tracker works best with
    ///            stable lighting conditions, BGR (color) frames, and accurate, complete
    ///            detections. In order to improve detections, a higher 2d net resolution may be
    ///            needed. In order to have complete detections, setting a high min valid joints on
    ///            PoseParams (for example, 12 or more) which configure a PoseEstimator may help.
    ///            Note that the default min valid joints used by PoseEstimators is currently 3.
    ///            Also note that this tracker comes with a nontrivial runtime cost -- users not
    ///            interested in tracking should disable tracking (by using
    ///            `wrPoseParams_SetEnableTracking(poseParams, 0)`).
    /// @param handle the poseParams object to modify.
    /// @param trackerKind the kind to set. `wrTrackerKind_V1` selects the V1 tracker,
    ///        `wrTrackerKind_V2` selects the V2 tracker. Calling
    ///        `wrPoseParams_SetTrackerKind(handle, wrTrackerKind_None)` is equivalent to calling
    ///        `wrPoseParams_SetEnableTracking(handle, 0)`. Any other value has no effect.
    WRNCH_DLL_INTERFACE void wrPoseParams_SetTrackerKind(wrPoseParamsHandle handle,
                                                         wrTrackerKind trackerKind);
    WRNCH_DLL_INTERFACE wrTrackerKind wrPoseParams_GetTrackerKind(wrPoseParamsHandleConst handle);
    WRNCH_DLL_INTERFACE void wrPoseParams_SetBoneSensitivity(wrPoseParamsHandle, wrSensitivity);
    WRNCH_DLL_INTERFACE void wrPoseParams_SetJointSensitivity(wrPoseParamsHandle, wrSensitivity);
    /// @brief set the preferred net width for a 2d estimator.
    /// @param params the pose params to modify.
    /// @param width the preferred 2d net width.
    /// @note  On iOS and CPU-Only builds, setting this value has no effect on a resulting estimator -- the net
    ///        dimensions are fixed in the on-disk models.
    WRNCH_DLL_INTERFACE void wrPoseParams_SetPreferredNetWidth2d(wrPoseParamsHandle params,
                                                                 int width);
    /// @brief set the preferred net height for a 2d estimator.
    /// @param params the pose params to modify.
    /// @param height the preferred 2d net height.
    /// @note  On iOS and CPU-Only builds, setting this value has no effect on a resulting estimator -- the net
    ///        dimensions are fixed in the on-disk models.
    WRNCH_DLL_INTERFACE void wrPoseParams_SetPreferredNetHeight2d(wrPoseParamsHandle params,
                                                                  int height);
    /// @brief set the preferred net width for a 3d estimator.
    /// @param params the pose params to modify.
    /// @param width the preferred 3d net width.
    /// @note  On iOS and CPU-Only builds, setting this value has no effect on a resulting estimator -- the net
    ///        dimensions are fixed in the on-disk models.
    WRNCH_DLL_INTERFACE void wrPoseParams_SetPreferredNetWidth3d(wrPoseParamsHandle params,
                                                                 int width);
    /// @brief set the preferred net height for a 3d estimator.
    /// @param params the pose params to modify.
    /// @param height the preferred 3d net height.
    /// @note  On iOS and CPU-Only builds, setting this value has no effect on a resulting estimator -- the net
    ///        dimensions are fixed in the on-disk models.
    WRNCH_DLL_INTERFACE void wrPoseParams_SetPreferredNetHeight3d(wrPoseParamsHandle params,
                                                                  int height);
    WRNCH_DLL_INTERFACE void wrPoseParams_SetSmoothingBetaX(wrPoseParamsHandle, float betaX);
    WRNCH_DLL_INTERFACE void wrPoseParams_SetSmoothingBetaY(wrPoseParamsHandle, float betaY);
    WRNCH_DLL_INTERFACE void wrPoseParams_SetSmoothingBetaZ(wrPoseParamsHandle, float betaZ);
    WRNCH_DLL_INTERFACE void wrPoseParams_SetMinValidJoints(wrPoseParamsHandle, int minJoints);
    WRNCH_DLL_INTERFACE wrSensitivity wrPoseParams_GetBoneSensitivity(wrPoseParamsHandleConst);
    WRNCH_DLL_INTERFACE wrSensitivity wrPoseParams_GetJointSensitivity(wrPoseParamsHandleConst);
    WRNCH_DLL_INTERFACE int wrPoseParams_GetPreferredNetWidth2d(wrPoseParamsHandleConst);
    WRNCH_DLL_INTERFACE int wrPoseParams_GetPreferredNetHeight2d(wrPoseParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrPoseParams_GetSmoothingBetaX(wrPoseParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrPoseParams_GetSmoothingBetaY(wrPoseParamsHandleConst);
    WRNCH_DLL_INTERFACE float wrPoseParams_GetSmoothingBetaZ(wrPoseParamsHandleConst);
    WRNCH_DLL_INTERFACE int wrPoseParams_GetMinValidJoints(wrPoseParamsHandleConst);